k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ncfn
  labels:
    app.kubernetes.io/managed-by: kubectl
    project: ncfn-portal
