k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-svc
  namespace: ncfn
  labels:
    app: portal
    project: ncfn-portal
spec:
  type: ClusterIP
  selector:
    app: portal
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
